Published multiple files

--- a/src/site/notes/Religiões/1. Sobre o Kaleste e a Ruptura Planar.md
+++ b/src/site/notes/Religiões/1. Sobre o Kaleste e a Ruptura Planar.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/religioes/1-sobre-o-kaleste-e-a-ruptura-planar/"}
+{"dg-publish":true,"permalink":"/Religiões/1. Sobre o Kaleste e a Ruptura Planar/"}
 ---
 
 O que é chamado de Kaleste são fragmentos de um texto antigo escrito em um monumento de pedra em algum momento antes da Ruptura Planar. A Ruptura foi o resultado da Última Batalha Divina que ocorreu há cerca de 5 milênios de quando a nossa história se passa, que separou definitivamente os Planos de Existência, que antes eram compartilhados através de um espaço comum: Arkas. Os seres vivos que estavam no epicentro desse espaço comum no momento da Ruptura e conseguiram de alguma forma sobreviver (a maioria foi protegida por Planares, visto que os Deuses se prenderam em seus próprios Planos) são os descendentes das espécies que vivem hoje em Arkas, porém, após esse cataclismo suas memórias foram totalmente perdidas (exceto as dos Semideuses, que foram apenas parcialmente perdidas), perderam sua fala e não conseguiam nem mesmo entender o que os Planares diziam.
