--- a/src/site/notes/Religiões/2. A Respeito da Origem e Progressão das Religiões.md
+++ b/src/site/notes/Religiões/2. A Respeito da Origem e Progressão das Religiões.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/religioes/2-a-respeito-da-origem-e-progressao-das-religioes/"}
+{"dg-publish":true,"permalink":"/Religiões/2. A Respeito da Origem e Progressão das Religiões/"}
 ---
 
 Todas as religiões começaram a partir de um conceito vindo a partir Planares (semideuses e celestiais): Uma forma de reconectar-se, fazer com que as espécies inteligentes voltassem a se ligar com suas esquecidas origens. Antes da Ruptura, quando os Planos Astrais eram livres a todos nós eramos ligados diretamente aos Deuses, sentíamos suas presenças e todos os Deuses eram um só, Hermathoth.
