--- a/src/site/notes/Nações/1. Sobre Arkas.md
+++ b/src/site/notes/Nações/1. Sobre Arkas.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/nacoes/1-sobre-arkas/","tags":["gardenEntry"]}
+{"dg-publish":true,"permalink":"/Nações/1. Sobre Arkas/","tags":["gardenEntry"]}
 ---
 
 
